--- a/css/rock-paper-scissors.css
+++ b/css/rock-paper-scissors.css
@@ -22,8 +22,9 @@ button {
     
 }
 
-#score {
-    text-align: center;
+#scoreContainer {
+    display: flex;
+    justify-content: center;
 }
 
 #playersContainer {
